iniciar el video 6 del modulo 8 PaisesApp

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "67a57cf6-082f-4c1e-bd19-407995a4fc6d"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
